--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "croppie": "^2.5.0",
     "react": "^15.6.1",
+    "react-croppie": "^1.0.0",
     "react-dom": "^15.6.1",
+    "react-images-upload": "^1.1.1",
     "react-scripts": "1.0.13"
   },
   "scripts": {
