make it look a tiny bit better

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "classnames": "^2.2.5",
     "croppie": "^2.5.0",
     "react": "^15.6.1",
     "react-croppie": "^1.0.0",
