--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "react-croppie": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-images-upload": "^1.1.1",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-slick": "^0.15.4"
   }
 }
