--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-croppie": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-images-upload": "^1.1.1",
+    "react-responsive-carousel": "^3.1.27",
     "react-scripts": "1.0.13",
     "react-stripe-checkout": "^2.6.3"
   },
