--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "react-croppie": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-images-upload": "^1.1.1",
+    "react-redux": "^5.0.6",
     "react-responsive-carousel": "^3.1.27",
     "react-scripts": "1.0.13",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
