--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-responsive-carousel": "^3.1.27",
     "react-scripts": "1.0.13",
     "react-stripe-checkout": "^2.6.3",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
