--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-images-upload": "^1.1.1",
     "react-redux": "^5.0.6",
     "react-responsive-carousel": "^3.1.27",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
