--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "croppie": "^2.5.0",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-croppie": "^1.0.0",
     "react-dom": "^15.6.1",
